--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: dart_csv
 description: A Dart package to write comma separated values to a file.
-version: 1.0.0
+version: 1.0.1
 repository: https://github.com/JonasPrimbs/dart_csv
 
 environment:
   sdk: ^3.2.0
 
 dependencies:
-  intl: ^0.18.1
+  intl:
 
 dev_dependencies:
-  lints: ^2.1.0
-  test: ^1.24.0
+  lints: ^4.0.0
+  test: ^1.25.5
